--- a/src/main/resources/api_errors.properties
+++ b/src/main/resources/api_errors.properties
@@ -1,4 +1,9 @@
 guest-1=First name is mandatory and cannot be blank
 guest-2=Last name is mandatory and cannot be blank
 guest-3=E-mail is mandatory and cannot be blank
-guest-4=E-mail is mandatory and cannot be blank
+guest-4=E-mail is malformated
+
+staff-1=First name is a mandatory field
+staff-2=Last name is a mandatory fieldpn
+
+generic-1={0} is invalid
